<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/back"
    >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/digiteemail"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/entrar"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@+id/btnCadastro"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSenha" />

        <Button
            android:id="@+id/btnCadastro"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="52dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/cadastrar"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSenha" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="242dp"
            android:layout_height="178dp"
            android:layout_marginTop="76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/unnamed" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
