<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".FormularioActivity"
   >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <EditText
            android:id="@+id/etNome"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/nomedoprod"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.490"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spCategoria"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="#FFFFFF"
            android:entries="@array/categorias"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etQuantidade" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/salvar"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spCategoria" />

        <EditText
            android:id="@+id/etQuantidade"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="#FFFFFF"
            android:hint="@string/quantidade"
            android:inputType="number|numberDecimal"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNome" />

        <EditText
            android:id="@+id/etData"
            android:layout_width="208dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/data"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.326"
            app:layout_constraintStart_toEndOf="@+id/etQuantidade"
            app:layout_constraintTop_toBottomOf="@+id/etNome" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>